k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1 # keep to one!!, we don't wanna write to a single db from multiple pods without knowing about each other, we will use PVC
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim # map to the database-persistent-volume-claim.yaml
      containers:
        - name: postgres
          image: postgres # public image in docker hub
          ports:
            - containerPort: 5432
          volumeMounts: # hi we just get access to the storage, and this is how it will be used within the container
            - name: postgres-storage # same as volume name!!
              mountPath: /var/lib/postgresql/data # where data get stored in postgres
              subPath: postgres # specific for postgres - subfolder
