k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server # what we have server-deployment.yaml as label in template
  ports:
    - port: 5000 # the port for other Pods that needs multi-server pod
      targetPort: 5000  # the port server-deployment that the express server exposes to us
